// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with a text children 1`] = `
<styled.span>
  <BrownTheme
    key=".0"
  >
    This is a text
  </BrownTheme>
</styled.span>
`;

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <BrownTheme
    key=".0"
  >
    <div />
  </BrownTheme>
</styled.span>
`;
